--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,13 +1,13 @@
 body {
-  padding: 5%;
+  padding: 0%;
   background-color: #F5F5F5;
 }
 
 .container {
   padding:0;
-  background-color: #FFF; 
+  background-color: #FFF;
   box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
-  height: 700px;
+  height: 97%;
 }
 
 /* ===== MENU ===== */
@@ -53,23 +53,60 @@ body {
 /* === CONVERSATIONS === */
 
 .discussions {
-  width: 35%;
-  height: 700px;
-  box-shadow: 0px 8px 10px rgba(0,0,0,0.20);
-  overflow: hidden;
-  background-color: #87a3ec;
-  display: inline-block;
-}
+    width: 35%;
+    height: 700px;
+    box-shadow: 0px 8px 10px rgba(0, 0, 0, 0.20);
+    overflow-y: auto;
+    background-color: #87a3ec;
+    display: inline-block;
+  }
 
-.discussions .discussion {
-  width: 100%;
-  height: 90px;
-  background-color: #FAFAFA;
-  border-bottom: solid 1px #E0E0E0;
-  display:flex;
-  align-items: center;
-  cursor: pointer;
-}
+  .discussion {
+    width: 100%;
+    height: 90px;
+    background-color: #fafafa;
+    border-bottom: solid 1px #e0e0e0;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+  }
+
+
+  .photo {
+    width: 60px;
+    height: 60px;
+    background-image: url(https://via.placeholder.com/60);
+    background-size: cover;
+    border-radius: 50%;
+    margin: 0 10px;
+  }
+
+  .desc-contact {
+    flex: 1;
+  }
+
+  .timer {
+    margin-right: 10px;
+  }
+
+  /* Style for the searchbar */
+  .searchbar {
+    display: flex;
+    align-items: center;
+    padding: 10px;
+  }
+
+  .searchbar input[type="text"] {
+    flex: 1;
+    border: none;
+    outline: none;
+    background: transparent;
+  }
+
+  .searchbar i {
+    margin-right: 10px;
+  }
+
 
 .discussions .search {
   display:flex;
@@ -177,6 +214,7 @@ body {
 
 .chat {
   width: calc(65% - 85px);
+  height: 70vh;
 }
 
 .header-chat {
@@ -208,11 +246,21 @@ body {
 
 .chat .messages-chat {
   padding: 25px 35px;
+  max-height: 97%; /* Set a maximum height for the messages container */
+
+  overflow-y: auto; /* Enable vertical scrolling */
+
+
+
 }
 
 .chat .messages-chat .message {
   display:flex;
   align-items: center;
+  position: relative;
+
+  justify-content:end;
+
   margin-bottom: 8px;
 }
 
@@ -236,7 +284,10 @@ body {
 }
 
 .text-only {
-  margin-left: 45px;
+    margin: 0;
+    margin-right: 50%; /* Updated from margin-left */
+    display: flex;
+  justify-items: start;
 }
 
 .time {
@@ -270,7 +321,7 @@ body {
   bottom: 0;
   background-color: transparent;
   border-top: 2px solid #EEE;
-  
+
 }
 
 .chat .footer-chat .icon {
